<resources>
    <string name="app_name">Adornos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ingreso</string>
    <string name="menu_gallery">Cuadros</string>
    <string name="menu_slideshow">Personalizados</string>
    <string name="menu_servicios">Contáctanos</string>
    <string name="menu_nuevo">Nuevo</string>

    <string name="textTitulo">Adornos a todo color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compras">Compras</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="compralo_aqui">Compralo aquí</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>