<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_portrait_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_palette_20"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/menu_servicios" />

        <item
            android:id="@+id/nav_nuevo"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/menu_nuevo" />
    </group>
</menu>